# miku-os

./: Cargo.toml  LICENSE  README.md  build.rs  grub.cfg  linker.ld
.github/workflows/: release.yml
builder/: Cargo.toml
builder/src/: main.rs
docs/: English_README.md  Formatting.md  Home.md  Japanese_README.md  MikuOS_ABI.md  Russian_README.md  building.md  color-macros.md  dev-virtual-filesystem.md  disk-images.md  elf-loader-and-dynamic-linking.md  ext2-commands.md  ext3-commands.md  ext4-commands.md  gpt-partitioning.md  libmikuso-standard-library.md  memory-management.md  mikud-init-daemon.md  mount-commands.md  mounting-filesystems.md  network-commands.md  network-stack.md  nvidia-gpu-commands.md  proc-virtual-filesystem.md  scheduler.md  serial-output-tags.md  storage--block-layer.md  swap.md  syscall-interface.md  system-commands.md  unified-ext-commands.md  userspace-sdk.md  vfs-commands.md
ld-miku/: Cargo.toml
libmiku/: Cargo.toml
src/: acpi.rs  apic.rs  ata.rs  boot_entry.rs  console.rs  dynlink.rs  elf.rs  elf_loader.rs  firmware.rs  firmware_probe.rs  fwload.rs  gdt.rs  gpt.rs  interrupts.rs  main.rs  mmap.rs  percpu.rs  pmm.rs  process.rs  ps2.rs  reloc.rs  scheduler.rs  shell.rs  signal.rs  smp.rs  solib.rs  splash.rs  swap.rs  swap_map.rs  syscall.rs  timing.rs  usb_handoff.rs  vfs_read.rs  vmm.rs
src/block/: ahci.rs  cache.rs  driver.rs  mod.rs  nvme.rs  virtio_blk.rs
src/commands/: disk_cmds.rs  ext2_cmds.rs  ext3_cmds.rs  ext4_cmds.rs  ext_cmds_common.rs  fs.rs  mkfs_cmds.rs  mod.rs  nvidia_cmds.rs  system.rs  xattr_cmds.rs
(+188 files in other folders)
