[workspace]
members  = ["builder", "ld-miku"]
resolver = "2"

[package]
name        = "miku-os-release"
license     = "MIT"
version     = "0.2.0"
edition     = "2021"
authors     = ["altushkaso2"]
description = "Experimental OS in Rust"
repository  = "https://github.com/alunwrd/miku-os"

[dependencies]
volatile              = "0.2.6"
spin                  = "0.9.8"
x86_64                = "0.14.2"
noto-sans-mono-bitmap = "0.2"
log                   = "0.4"
lazy_static           = { version = "1.4.0", features = ["spin_no_std"] }
pc-keyboard           = "0.7.0"
pic8259               = "0.10.1"
linked_list_allocator = "0.10.5"

[build-dependencies]
fontdue = "0.9"

[profile.dev]
panic     = "abort"
opt-level = 1

[profile.release]
panic     = "abort"
opt-level = 2
lto       = true
